@@ -70,7 +70,6 @@
 	<a href="about/automated-engraving/">our essay...</a>
       </p>
     </td>
-wn
   </tr>
   
       
