@@ -1,6 +1,13 @@
+2006-11-01  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* site/announce-v2.10.html: suggestions by Cameron Horsburgh.
+
+	* site/index.html: remove typo.
+
 2006-10-31  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* site/announce-v2.10.html: update
+	tweaks.
 
 2006-10-28  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
